syntax = "proto3";

package clay;
import "google/protobuf/empty.proto";

service Clay {
  rpc Hello (HelloMessage) returns (HelloMessage) {}
  rpc SubscribeNodeUpdates (google.protobuf.Empty) returns (stream NodeUpdate);
  rpc SubscribeFocusUpdates (google.protobuf.Empty) returns (stream Focus);

  rpc GetFocus (GetFocusRequest) returns (GetFocusResponse);
  rpc SelectFocus (SelectFocusRequest) returns (google.protobuf.Empty);
}

message HelloMessage {
  string message = 1;
}

message NodeUpdate {
  int32 id = 1;
  string url = 2;
  int32 parentId = 3;
  repeated int32 childrenIds = 4;

  string title = 5;
}

message GetFocusResponse {
  repeated Focus focusList = 1;
}

message Focus {
  int32 id = 1;
  int32 nodeId = 2;
  int32 tabId = 3;
  bool active = 4;
}

message GetFocusRequest {
  int32 nodeId = 2;
}
message SelectFocusRequest {
  int32 id = 1;
}
